@@ -1,0 +1,99 @@
+;;; emacspeak-eperiodic.el --- Speech-enable Periodic Table
+;;; $Id$
+;;; $Author$
+;;; Description:  Emacspeak speech-enabler for Periodic Table
+;;; Keywords: Emacspeak, periodic  Table
+;;{{{  LCD Archive entry:
+
+;;; LCD Archive Entry:
+;;; emacspeak| T. V. Raman |raman@cs.cornell.edu
+;;; A speech interface to Emacs |
+;;; $Date$ |
+;;;  $Revision$ |
+;;; Location undetermined
+;;;
+
+;;}}}
+;;{{{  Copyright:
+
+;;; Copyright (C) 1999 T. V. Raman <raman@cs.cornell.edu>
+;;; All Rights Reserved.
+;;;
+;;; This file is not part of GNU Emacs, but the same permissions apply.
+;;;
+;;; GNU Emacs is free software; you can redistribute it and/or modify
+;;; it under the terms of the GNU General Public License as published by
+;;; the Free Software Foundation; either version 2, or (at your option)
+;;; any later version.
+;;;
+;;; GNU Emacs is distributed in the hope that it will be useful,
+;;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;;; GNU General Public License for more details.
+;;;
+;;; You should have received a copy of the GNU General Public License
+;;; along with GNU Emacs; see the file COPYING.  If not, write to
+;;; the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
+
+;;}}}
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+;;{{{  Introduction:
+
+;;; eperiodic produces an interactive periodic table of elements
+;;; and can be found at 
+;;; http://vegemite.chem.nottingham.ac.uk/~matt/emacs/eperiodic.el
+
+;;}}}
+;;{{{ required modules
+
+;;; Code:
+
+(eval-when-compile (require 'cl))
+(declaim  (optimize  (safety 0) (speed 3)))
+(require 'advice)
+(require 'backquote)
+(eval-when-compile
+  (require 'emacspeak-speak)
+  (require 'emacspeak-sounds))
+
+;;}}}
+;;{{{ advice interactive commands
+
+(defadvice eperiodic (after emacspeak pre act comp)
+  "Provide spoken feedback."
+  (when (interactive-p)
+    (emacspeak-auditory-icon 'open-object)
+    (emacspeak-speak-mode-line)))
+(defadvice eperiodic-move (after emacspeak pre act comp)
+  "Provide auditory feedback."
+  (when (interactive-p)
+    (emacspeak-auditory-icon 'select-object)))
+
+
+(defadvice eperiodic-show-element-info (after emacspeak pre act comp)
+  "Speak displayed info."
+  (when (interactive-p)
+    (let ((b (get-buffer "*EPeriodic Element*")))
+      (unless b
+        (error "Cannot find displayed info."))
+      (save-excursion
+        (set-buffer b)
+        (emacspeak-speak-buffer)))))
+
+(defadvice eperiodic-bury-buffer (after emacspeak pre act comp)
+  "Provide auditory feedback."
+  (when (interactive-p)
+    (emacspeak-auditory-icon 'close-object)
+    (emacspeak-speak-mode-line)))
+
+;;}}}
+(provide 'emacspeak-eperiodic)
+;;{{{ end of file
+
+;;; local variables:
+;;; folded-file: t
+;;; byte-compile-dynamic: nil
+;;; end:
+
+;;}}}
